--- a/recipes/tomato_chutney.html
+++ b/recipes/tomato_chutney.html
@@ -6,5 +6,33 @@
     </head>
     <body>
         <h1>Tomato Chutney</h1>
+        <p><img src="../Images/Tomato-Chutney-500x500.jpg" width=205 length=205 alt="A beautiful picture of fresh tomato chutney that is orange in color."</p>
+           
+        <p>Tomato Chutney is a staple dish in southern parts of India where it is usually served as a side dish along with a main dish such as <a href="../Images/wp6734909.jpg">Dosa</a>,<a href="../Images/istockphoto-526846282-612x612.jpg">Chappatis</a>, etc. It's a paste/mixture of tomato puree, and spices and tastes absolutely delicious when eaten fresh! It's also very easy to make and can be a quick dish to go along with your rotis, dosas etc. I eat them almost 3-4 times a week along with my dosas and never get tired of it! The spicyness and the paste like texture is a delight to eat and it's honestly one of my favourites.</p>
+            <p><h2>Ingredients</h2></p>
+             <ul>
+                 <li>Fresh Tomatoes</li>
+                 <li>Onions</li>
+                 <li>Salt</li>
+                 <li>Curry Leaves</li>
+                 <li>Garlic</li>
+                 <li>Mustard</li>
+                 <li>Dried Red Chilli</li>
+                 <li>Groundnut Oil</li>
+                 <li>Asafoetida Powder (Perungayam in tamil)</li>
+
+            </ul>
+            <p><h2>Steps</h2></p>
+             <ol>
+                 <li>Cut 4-5 tomatoes and 3-4 onions into small pieces and is kept aside.</li>
+                 <li>Take a pan with about 3 tsps of oil and heat it up lightly.</li>
+                 <li>Add the cut onions and around 4-5 chillies into the pan and roast them to a golden color.</li>
+                 <li>Now add the cut tomatoes with the required quantity of salt (abt 1 tsps) and mix/roast along with the onions.</li>
+                 <li>After the tomatoes, onions and chillies mix well together, allow them to cool down for about 10 minutes.</li>
+                 <li>Add the quantities in an electric mixy and convert them to a nice paste.</li>
+                 <li>Now add about 2 tsps of oil in a pan and heat it lightly.</li>
+                 <li>Add 1/2 tsps of mustard seeds, about 10 curry leaves, a small pinch of Asafoetida powder and roast them until the mustard seeds break down.</li>
+                 <li>Now add the contents of the pan to the paste we got before and mix them well.</li>
+             </ol>
     </body>
 </html>
