--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-       <h1>Odin Recipes</h1> 
+       <h1>Recipes</h1> 
        <ul>
            <li><a href="recipes/tomato_chutney.html">Tomato Chutney</a></li>
            
